--- a/src/css/cv.css
+++ b/src/css/cv.css
@@ -23,6 +23,7 @@
     background-image: url("../img/limbo.png");
     background-position: center center;
     background-repeat: no-repeat;
+    background-size: cover;
     opacity: 0.08;
     z-index: -1;
 }
@@ -122,28 +123,28 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    justify-content: center;
     align-items: center;
-    padding-bottom: 200px;
+    padding-top: 20px;
 }
 
-#cv #left h4{
+#cv #left #text-hero{
+    opacity: 0.7;
+}
+
+#cv #left #text-hero h4{
     font-size: 12em;
     font-family: pixel;
     text-transform: uppercase;
-    opacity: 0.7;
-    position: relative;
 }
-#cv #left h4::after{
-    content: "Professeur";
+#cv #left #text-hero i{
     font-family: mytext;
-    font-size: large;
+    font-size: 1.2em;
     text-transform: capitalize;
     font-style: italic;
-    position: absolute;
+    position: relative;
     width: 100%;
     height: fit-content;
-    bottom: 10px;
+    top: -1.2em;
     left: 10px;
 }
 
@@ -181,16 +182,17 @@
 }
 
 #cv #hero-ul li img{
-    width: 200%;
+    width: 100%;
     object-position: -20px top;
     transform: scale(1);
     transition: all 0.5s ease;
-
+    object-position: top left;
 }
 
 #cv #right{
     position: relative;
     margin-right: 70px;
+    margin-bottom: 70px;
 }
 #cv picture img {
     object-fit: contain;
