--- a/src/css/levels.css
+++ b/src/css/levels.css
@@ -1,3 +1,109 @@
 #levels{
-    height: 100vh;
+    min-height: 100vh;
+    padding: 100px;
+    box-sizing: border-box;
+}
+
+#levels ul {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+
+#levels ul h4, #levels ul i{
+    font-family: pixel;
+}
+#levels ul i{
+    text-transform: uppercase;
+    font-style: normal;
+    font-size: 3em;
+    position: relative;
+    top: -0.1em;
+    left: -0.05em;
+}
+
+#levels ul li {
+    font-size: 1.5rem;
+    font-weight: bold;
+    cursor: pointer;
+    position: relative;
+}
+
+.carousel {
+    display: flex;
+    gap: 20px;
+    /* overflow-x: auto; */
+    /* overflow-y: clip; */
+    padding: 10px 0px;
+}
+.carousel-item {
+    position: relative;
+    flex: 0 0 250px;
+    aspect-ratio: 2/3;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: stretch;
+    transition: margin-right 0.3s ease;
+}
+
+.carousel-item.active {
+    margin-right: 300px;
+}
+
+.carousel-item img {
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 1px;
+    transition: transform 0.3s ease;
+    z-index: 1;
+}
+
+.carousel-item:not(.active):hover img {
+    transform: scale(1.1);
+}
+
+.overlay {
+    position: absolute;
+    left: 0;
+    width: 0%;
+    height: 80%;
+    background: rgba(255, 255, 255, 0.7);
+    color: black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    overflow: hidden;
+    transform-origin: left;
+    transition: width 0.3s ease;
+}
+
+.overlay.active {
+    width: 300px;
+    left: 100%;
+}
+
+.overlay h4 {
+    font-size: 1.2rem;
+    margin: 10px 0;
+}
+
+.overlay p {
+    font-size: 0.9rem;
+    margin: 5px 0;
+}
+
+.overlay a {
+    color: #00bfff;
+    text-decoration: none;
+    margin-top: 10px;
+    font-weight: bold;
+}
+
+.overlay a:hover {
+    text-decoration: underline;
 }
