--- a/src/css/levels.css
+++ b/src/css/levels.css
@@ -2,6 +2,7 @@
     min-height: 100vh;
     padding: 100px;
     box-sizing: border-box;
+    background-color: var(--black);
 }
 
 #levels ul {
@@ -27,17 +28,28 @@
 #levels ul li {
     font-size: 1.5rem;
     font-weight: bold;
-    cursor: pointer;
     position: relative;
 }
 
 .carousel {
     display: flex;
     gap: 20px;
-    /* overflow-x: auto; */
-    /* overflow-y: clip; */
-    padding: 10px 0px;
+    overflow-x: auto;
+    overflow-y: clip;
+    padding: 20px 50px;
+    border-left: 5px double var(--primarybis);
+    position: relative;
+    cursor: grab;
+    scroll-behavior: smooth;
 }
+.carousel:active {
+    cursor: grabbing;
+}
+.carousel::-webkit-scrollbar{
+    width:0px;
+    height: 0px;
+}
+
 .carousel-item {
     position: relative;
     flex: 0 0 250px;
@@ -53,26 +65,73 @@
     margin-right: 300px;
 }
 
+.carousel-item.active img{
+    border: 1px solid var(--white);
+}
+
+.carousel-item.active img, .carousel-item:not(.lock):hover img{
+    filter: grayscale(0%) sepia(0%) brightness(100%);
+}
+
 .carousel-item img {
     max-width: 100%;
     max-height: 100%;
     border-radius: 1px;
-    transition: transform 0.3s ease;
+    transition: transform 0.3s ease, filter 0.3s ease;
     z-index: 1;
+    border: 1px solid transparent;
+    filter: grayscale(10%) sepia(40%) brightness(85%);
+    
+    cursor: pointer;
 }
 
-.carousel-item:not(.active):hover img {
+.carousel-item:not(.active):not(.lock):hover img {
     transform: scale(1.1);
+}
+.carousel-item.lock .img-lock{
+    height: 100%;
+}
+.carousel-item.lock .img-lock{
+    position: relative;
+    cursor: inherit;
+}
+.carousel-item.lock .img-lock::after{
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    opacity: 0.1;
+    background-color: var(--secondary);
+    border: 0.5px solid var(--white);
+
+}
+.carousel-item.lock .img-lock::before{
+    content: "Locked";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0.3;
+    font-family: pixel;
 }
 
 .overlay {
     position: absolute;
-    left: 0;
+    left: 3px;
     width: 0%;
     height: 80%;
-    background: rgba(255, 255, 255, 0.7);
-    color: black;
+    padding: 10px;
+    box-sizing: border-box;
+    background: var(--white);
+    color: var(--black);
     display: flex;
+    gap: 10px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -81,7 +140,6 @@
     transform-origin: left;
     transition: width 0.3s ease;
 }
-
 .overlay.active {
     width: 300px;
     left: 100%;
@@ -89,7 +147,7 @@
 
 .overlay h4 {
     font-size: 1.2rem;
-    margin: 10px 0;
+    margin: 0;
 }
 
 .overlay p {
@@ -98,12 +156,41 @@
 }
 
 .overlay a {
-    color: #00bfff;
+    color: var(--secondary);
     text-decoration: none;
-    margin-top: 10px;
     font-weight: bold;
+
+    transition: color 0.2s ease;
+    position: relative;
+    right: 7px;
+}
+.overlay a:hover {
+    color: var(--secondarybis);
+    text-decoration: underline;
+}
+.overlay a::before{
+    content: "";
+    top: 50%;
+    right: -7px;
+    transform: translate(100%,-50%);
+    width: 100%;
+    height: 60%;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url(../img/expand.png);
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
-.overlay a:hover {
-    text-decoration: underline;
+.overlay .plus{
+    border-top: 1px solid var(--primary);
+    padding: 10px 0px;
+}
+.overlay .plus p{
+    margin: 0;
+}
+.overlay .plus p strong{
+    text-transform: capitalize;
 }
