--- a/src/css/levels.css
+++ b/src/css/levels.css
@@ -1,8 +1,23 @@
 #levels{
     min-height: 100vh;
-    padding: 100px;
+    padding: 70px 30px;
     box-sizing: border-box;
     background-color: var(--black);
+}
+
+#levels #start {
+    margin-bottom: 3.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+#levels #start h3 {
+    font-family: 'pixel';
+    font-size: 3.5rem;
+}
+#levels #start i {
+    font-size: 1.1em;
 }
 
 #levels ul {
@@ -36,7 +51,7 @@
     gap: 20px;
     overflow-x: auto;
     overflow-y: clip;
-    padding: 20px 50px;
+    padding: 20px;
     border-left: 5px double var(--primarybis);
     position: relative;
     cursor: grab;
@@ -83,6 +98,7 @@
     filter: grayscale(10%) sepia(40%) brightness(85%);
     
     cursor: pointer;
+    user-select: none;
 }
 
 .carousel-item:not(.active):not(.lock):hover img {
@@ -124,9 +140,9 @@
 .overlay {
     position: absolute;
     left: 3px;
-    width: 0%;
+    width: calc(100% - 3px);
     height: 80%;
-    padding: 10px;
+    padding: 20px;
     box-sizing: border-box;
     background: var(--white);
     color: var(--black);
@@ -138,7 +154,8 @@
     text-align: center;
     overflow: hidden;
     transform-origin: left;
-    transition: width 0.3s ease;
+    transition: left 0.3s ease;
+    border: 1px solid transparent;
 }
 .overlay.active {
     width: 300px;
@@ -146,15 +163,19 @@
 }
 
 .overlay h4 {
-    font-size: 1.2rem;
     margin: 0;
 }
 
 .overlay p {
     font-size: 0.9rem;
-    margin: 5px 0;
+    margin: 0;
 }
 
+.overlay .links{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
 .overlay a {
     color: var(--secondary);
     text-decoration: none;
@@ -162,19 +183,23 @@
 
     transition: color 0.2s ease;
     position: relative;
+    
+}
+.overlay a:not([download]) {
     right: 7px;
 }
+
 .overlay a:hover {
     color: var(--secondarybis);
     text-decoration: underline;
 }
-.overlay a::before{
+.overlay a:not([download])::before {
     content: "";
     top: 50%;
     right: -7px;
     transform: translate(100%,-50%);
     width: 100%;
-    height: 60%;
+    height: 50%;
     position: absolute;
     display: flex;
     justify-content: center;
@@ -183,14 +208,23 @@
     background-size: contain;
     background-repeat: no-repeat;
 }
-
+.overlay a[download]{
+    font-size: 1rem;
+}
 .overlay .plus{
     border-top: 1px solid var(--primary);
-    padding: 10px 0px;
-}
-.overlay .plus p{
-    margin: 0;
+    padding-top: 10px;
 }
 .overlay .plus p strong{
     text-transform: capitalize;
+}
+
+
+@media screen and (min-width: 769px){
+    .carousel {
+        padding: 20px 50px;
+    }
+    #levels{
+        padding: 100px;
+    }
 }
