--- a/src/css/cv.css
+++ b/src/css/cv.css
@@ -20,7 +20,7 @@
     height: 100%;
     top: 0;
     left: 0;
-    background-image: url("../img/limbo.png");
+    background-image: url("../img/Games/limbo.png");
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
