--- a/src/css/levels.css
+++ b/src/css/levels.css
@@ -51,23 +51,33 @@
     gap: 20px;
     overflow-x: auto;
     overflow-y: clip;
-    padding: 20px;
+    padding: 20px 20px 30px 20px;
     border-left: 5px double var(--primarybis);
     position: relative;
-    cursor: grab;
     scroll-behavior: smooth;
 }
 .carousel:active {
     cursor: grabbing;
 }
-.carousel::-webkit-scrollbar{
-    width:0px;
-    height: 0px;
+.carousel::-webkit-scrollbar-track
+{
+	background-color: rgb(1, 1, 1, 0.1);
+}
+.carousel::-webkit-scrollbar
+{
+	width: 10px;
+    height: 10px;
+}
+.carousel::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	background-color: #FFF;
+	background-image: -webkit-linear-gradient(90deg, var(--primary), var(--primarybis));
 }
 
 .carousel-item {
     position: relative;
-    flex: 0 0 250px;
+    flex: 0 0 200px;
     aspect-ratio: 2/3;
     display: flex;
     flex-direction: column;
@@ -77,7 +87,7 @@
 }
 
 .carousel-item.active {
-    margin-right: 300px;
+    margin-right: 350px;
 }
 
 .carousel-item.active img{
@@ -158,7 +168,7 @@
     border: 1px solid transparent;
 }
 .overlay.active {
-    width: 300px;
+    width: 350px;
     left: 100%;
 }
 
@@ -222,9 +232,19 @@
 
 @media screen and (min-width: 769px){
     .carousel {
-        padding: 20px 50px;
+        padding: 20px 50px 30px 50px;
     }
     #levels{
         padding: 100px;
     }
+    .carousel-item {
+        flex: 0 0 250px;
+    }
+    .carousel-item.active {
+        margin-right: 300px;
+    }
+    .overlay.active {
+        width: 300px;
+    }
+    
 }
